[tool.poetry]
name = "ai-notebook-jupyterlab"
version = "5.0.0"
description = "AI Jupyter Notebook v5 - JupyterLab Edition with AI-powered code generation and validation"
authors = ["Slimpunt"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.3.5"
jupyter = "^1.1.1"
notebook = "^7.3.2"
ipykernel = "^6.29.5"
Flask = "^3.1.0"
flask-cors = "^5.0.0"
openai = "^1.58.1"
pandas = "^2.2.3"
numpy = "^2.2.1"
matplotlib = "^3.9.4"
seaborn = "^0.13.2"
plotly = "^5.24.1"
scikit-learn = "^1.6.1"
yfinance = "^0.2.51"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
openpyxl = "^3.1.5"
python-dotenv = "^1.0.1"
tensorflow = "^2.20.0"
xlrd = "^2.0.2"
opencv-python = "^4.12.0.88"
opencv-python-headless = "^4.12.0.88"
pillow = "^12.0.0"
imageio = "^2.37.0"
scikit-image = "^0.25.2"
nltk = "^3.9.2"
textblob = "^0.19.0"
gensim = "^4.4.0"
transformers = "^4.57.1"
sentencepiece = "^0.2.1"
folium = "^0.20.0"
geopy = "^2.4.1"
statsmodels = "^0.14.5"
prophet = "^1.2.0"
selenium = "^4.37.0"
lxml = "^6.0.2"
sqlalchemy = "^2.0.44"
pymongo = "^4.15.3"
redis = "^6.4.0"
faker = "^37.11.0"
python-dateutil = "^2.9.0.post0"
xlsxwriter = "^3.2.9"
wordcloud = "^1.9.4"
pyqrcode = "^1.2.1"
pypng = "^0.20220715.0"
arrow = "^1.4.0"
pyyaml = "^6.0.3"
tabulate = "^0.9.0"
colorama = "^0.4.6"
termcolor = "^3.1.0"
psycopg2-binary = "^2.9.11"
cryptography = "^46.0.3"
bcrypt = "^5.0.0"
jsonschema = "^4.25.1"
pytest = "^8.4.2"
black = "^25.9.0"
autoflake = "^2.3.1"
sympy = "^1.14.0"
networkx = "^3.5"
pyarrow = "^21.0.0"
fastapi = "^0.119.1"
uvicorn = "^0.38.0"
pydantic = "^2.12.3"
loguru = "^0.7.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
